--- a/cakify/.env.development
+++ b/cakify/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
-VUE_APP_API=http://malabarhangouts.com
+VUE_APP_API=http://malabarhangouts.com/api
 #VUE_APP_API=http://localhost:9090
